<resources>
    <string name="app_name">Vaguy</string>
    <string name="next">NEXT</string>
    <string name="skip">skip</string>
    <string name="start">GOT IT</string>
    <string name="Logo">Logo</string>
    <string name="slide_1_title">why should you sign up ?</string>
    <string name="slide_1_desc">we can help you look for brands best suited for you so you can spend less time looking and focus on creating amazing content .</string>
    <string name="slide_2_title">Unlock all benefits!</string>
    <string name="slide_2_desc">ONCE YOU SET UP YOUR PROFILE. CONNECT ALL SOCIAL ACCOUNTS AND GET ACESS TO ALL OUR BEST LEARNING RESSOURCES</string>
    <string name="slide_3_title">its your chance to be a part of something</string>
    <string name="slide_3_subtitle">HUGE!</string>
    <string name="slide_3_desc">join over 30.000 influencers who reportedly had 3.5X growth in reach</string>
    <string name="slide_4_title">so what are you waiting for</string>
    <string name="slide_4_desc">dont miss out , you’re just a tap away from sucess.</string>
    <string name="signup">sign up</string>
    <string name="signup_subtitle">fill the details and creat your account</string>
    <string name="signin">sign in</string>
    <string name="name">Name*</string>
    <string name="email">Email address*</string>
    <string name="mobile">Mobile number*</string>
    <string name="phone">Phone number*</string>
    <string name="acceptour">Accept our</string>
    <string name="term">Terme and Conditions</string>
    <string name="already">already registered?</string>
    <string name="newCompaign">new compaign </string>
    <string name="BrandName">Brand name*</string>
    <string name="enterbrandname">Enter Brand Name</string>
    <string name="Branddec">Brand Description*</string>
    <string name="Branddecripe">Describe your Brand</string>
    <string name="catagory">Categorie*</string>
    <string name="choosecatagory">Choose Category</string>
    <string name="url">Url to Brand (LInk)*</string>
    <string name="brandLink">Enter your brand Link </string>
    <string name="save">save</string>
    <string name="Platforms">Platforms*</string>
    <string name="setthebreif">Set The Breif </string>
    <string name="Prelaoded">Prelaoded Content* </string>
    <string name="Compaignname">Compaign name*  </string>
    <string name="enterCompaignname">Enter Comapign  Name </string>
    <string name="compaigntype">compaign type*</string>
    <string name="ReadyMakeContent">Ready Make Content  </string>
    <string name="CompaignDescription">Compaign Description*</string>
    <string name="EnterCompaignDescription">Enter Compaign Description</string>
    <string name="CallofAction">Call of Action*</string>
    <string name="EnterCallToAction">Enter Call To Action </string>
    <string name="Content">(Content creation. or Ready-Made content) </string>
    <string name="Moodboard">Moodboard*</string>
    <string name="publish">publish Guidlines </string>
    <string name="Do">Do</string>
    <string name="EenterDO">Enter Do</string>
    <string name="Dont">Dont</string>
    <string name="EnterDont">Enter Don’t  </string>
    <string name="Attachement">Attachement Description*</string>
    <string name="EnterAttachement">Enter Attachement Description</string>
    <string name="contentcreators">content creators</string>
    <string name="Age">Age*</string>
    <string name="Price">Price*</string>
    <string name="InfluencerType">Influencer Type*</string>
    <string name="Generic">Generic</string>
    <string name="Elite">Elite</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male </string>
    <string name="Female">Female</string>
    <string name="TargetContry">Target Contry* </string>
    <string name="Tregetregion">Treget region* </string>
    <string name="EnteryourtargetRegion">Enter your target Region</string>
    <string name="InterestIn">Interest In</string>
    <string name="Beautyfashion">Beauty &amp; fashion </string>
    <string name="Howtostyle">How to-style  </string>
    <string name="Fitnessyoga">Fitness &amp; yoga </string>
    <string name="TechnologieSience">Technologie &amp; Sience  </string>
    <string name="RestaurantFoodGrocery">Restaurant,Food &amp;  Grocery</string>
    <string name="HomeGarden">Home &amp; Garden </string>
    <string name="Cooking">Cooking </string>
    <string name="HealthyLifestyle">Healthy Lifestyle </string>
    <string name="BooksLiterature">Books &amp; Literature  </string>
    <string name="Moviestv">Movies &amp; tv  </string>
    <string name="LuxuryGoods">Luxury Goods</string>
    <string name="Entertainment">Entertainment</string>
    <string name="ChildrenFamily">Children &amp; Family </string>
    <string name="Photography">Photography</string>
    <string name="TravelTourism">Travel &amp; Tourism </string>
    <string name="Sports">Sports</string>
    <string name="Music">Music</string>
    <string name="ArtDesign">Art &amp; Design </string>
    <string name="BusinessCareers">Business &amp; Careers</string>
    <string name="CarsMotorbikes">Cars &amp; Motorbikes </string>
    <string name="Addanother">+Add another </string>
    <string name="ReviewAndConfirm">Review And Confirm </string>
    <string name="Whatcreator">What creator (Influencer) see :</string>
    <string name="newAccount">new Account </string>
    <string name="CreattheAccount">Creat the Account </string>
    <string name="influencername">influencer name* </string>
    <string name="CompaignDetails">Compaign Details </string>
    <string name="compaignName">compaign Name </string>
    <string name="Moadborad">Moadborad </string>
    <string name="PrelaodedContent">Prelaoded Content  </string>
    <string name="CalltoAction">Call to Action </string>
    <string name="WhatCreatorsDonSee">What Creators Don’t See:</string>
    <string name="Age2">Age:</string>
    <string name="InfluencerType2">Influencer Type : </string>
    <string name="Gender2">Gender :</string>
    <string name="TargetRegions">Target Regions:</string>
    <string name="interestIn">interest In:</string>
    <string name="Budget">Budget:</string>
    <string name="PaymentSubmit">Payment &amp; Submit</string>
    <string name="PaymentType">Payment Type*</string>
    <string name="Onbideapproval">On bide approval</string>
    <string name="CompaignPublishDate">Compaign Publish Date*</string>
    <string name="EnterCompaignPublishDate">Enter Compaign Publish Date</string>
    <string name="CompaignEndDate">Compaign End Date*</string>
    <string name="EnterCompaignEndDate">Enter Compaign End  Date</string>
    <string name="CompaignManagerDetails">Compaign Manager Details </string>
    <string name="FirstName">First Name*</string>
    <string name="LastName">Last Name*</string>
    <string name="Email">Email*</string>
    <string name="Mobilenumber">Mobile number* </string>
    <string name="FinancialDetails">Financial Details </string>
    <string name="CompanyName">Company Name*</string>
    <string name="VAT">VAT*</string>
    <string name="CR">CR*</string>
    <string name="FinancialEmail">Financial Email</string>
    <string name="FinancialPhone">Financial Phone*</string>
    <string name="BillingAddress">BillingAddress</string>
    <string name="StreetAdressPOBox">Street Adress /P.O Box*</string>
    <string name="City">City*</string>
    <string name="Wilaya">Wilaya*</string>
    <string name="PostZipcode">Post/Zip code*</string>
    <string name="Submit">Submit</string>
    <string name="Settings">Settings</string>
    <string name="CompaignName">Compaign Name</string>
    <string name="Email2">E-mail</string>
    <string name="Edit">Edit</string>
    <string name="Language">Language</string>
    <string name="wallet">wallet</string>
    <string name="ChangePassword">Change Password </string>
    <string name="PaymentHistory">Payment History </string>
    <string name="ABOUTUS">ABOUT US</string>
    <string name="logout">logout</string>
    <string name="Changelanguage">Change language </string>
    <string name="DarkMode">Dark Mode </string>
    <string name="Enteryourbudget">Enter your budget</string>
    <string name="uploadaimage">upload a header image for your compaign </string>
    <string name="creatcopaign">Creat the Copaign  </string>
    <string name="iminfluencer">IM INFLUENCER</string>
    <string name="imbrand">IM BRAND</string>
    <string name="typeSignUp"> ALGERIA’S LARGEST INFLUENCER MARKETING   PLATFORM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="Gender_Names">
        <item></item>
        <item>type1</item>
        <item>type2</item>
        <item>type3</item>
        <item>type4</item>
        <item>type5</item>
    </string-array>
    <string-array name="price">
        <item><b>DZD</b></item>
        <item><b>ERU</b></item>
        <item><b>USD</b></item>


    </string-array>
    <string-array name="type">
        <item>#</item>
        <item>*</item>
    </string-array>
    <string name="title_activity_influencer_account">InfluencerAccountActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="title_activity_main_app">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">settings</string>
    <string name="chat">chat</string>
    <string name="home">home</string>
    <string name="influencer">influencer</string>
    <string name="compaign">compaign</string>
    <string name="welcome_to_vaguy">Welcome to vaguy</string>
    <string name="hiuser">Hi user</string>
    <string name="start_another_conversation">Start another conversation</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="search_compaign">search compaign</string>
    <string name="forget_password"><u>forget password ?</u></string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">create new account</string>
    <string name="add_compaign">Add compaign</string>
    <string name="apply_now">Apply Now</string>
    <string name="type_a_message">type a message</string>
    <string name="start_your_first_campaign">Start your first campaign</string>
    <string name="wallet_history">Wallet History</string>
    <string name="balance">Balance</string>
    <string name="add_balance">Add Balance</string>
    <string name="all_transaction_details">All transaction details</string>
    <string name="current_password">current Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="connect_your_account">Connect Your Accounts</string>
    <string name="connect">Connect</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="tik_tok">Tik tok</string>
    <string name="youtube">Youtube</string>
    <string name="snapshat">Snapshat</string>
    <string name="sKIP">Skip</string>
    <string name="connect_instagram">Connect Instagram</string>
    <string name="enter_your_instagram_username">Enter Your instagram Username</string>
    <string name="connect_facebook">Connect Facebook</string>
</resources>