<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/house"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_influencer"
        android:icon="@drawable/star"
        android:title="@string/influencer" />

    <item
        android:id="@+id/navigation_compaign"
        android:icon="@drawable/compaign"
        android:title="@string/compaign" />


</menu>