<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.CreateCopaignFragment.PrelaodedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bt_back_review"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:id="@+id/your_state_progress_bar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:spb_animateToCurrentProgressState="true"
            app:spb_checkStateCompleted="true"
            app:spb_currentStateDescriptionColor="#F06BF2"
            app:spb_currentStateNumber="four"
            app:spb_maxStateNumber="five"
            app:spb_stateBackgroundColor="#7E7593"

            app:spb_stateDescriptionColor="#7E7593"
            app:spb_stateForegroundColor="#F06BF2"
            app:spb_stateLineThickness="2.8dp"
            app:spb_stateNumberBackgroundColor="#F06BF2"
            app:spb_stateNumberForegroundColor="#7E7593"
            app:spb_stateSize="@dimen/_30sdp" />


    </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"

            app:cardBackgroundColor="#EFD6E8"
            app:cardCornerRadius="@dimen/_30sdp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="@dimen/_35sdp"
                    android:id="@+id/textView3532213242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/PrelaodedContent"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_marginTop="@dimen/_18sdp"
                    android:id="@+id/textVie12w3532213242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/Do"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_group"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="#EFD6E8"
                    />

                <TextView
                    android:layout_marginTop="@dimen/_8sdp"
                    android:id="@+id/erte2rvsf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/Dont"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_groupfalse"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="#EFD6E8"
                    />

                <TextView
                    android:layout_marginTop="@dimen/_8sdp"
                    android:id="@+id/er23tervsf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/CalltoAction"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="-20dp"
            app:cardBackgroundColor="#EFD6E8"
            app:cardCornerRadius="@dimen/_30sdp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="@dimen/_14sdp"
                    android:id="@+id/textView32213242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/WhatCreatorsDonSee"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_marginTop="@dimen/_14sdp"
                    android:id="@+id/textView23213432213242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/Age2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/textView23432213242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/InfluencerType2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/text324View32213242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/Gender2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/textV2iew3532213242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/TargetRegions"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/textVie324w32213242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/InterestIn"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/textVie23324w32213242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:fontFamily="@font/salsa"
                    android:text="@string/Budget"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:fontFamily="@font/salsa"
            android:id="@+id/tv_save_at_moodboard"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@id/text2"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/ellipsesave"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
             />

        <ImageButton

            android:id="@+id/bt_next_Payment"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
</FrameLayout>