<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Progress Bar created-->

    <!--Button to go on next step-->
    <com.kofigyan.stateprogressbar.StateProgressBar
        android:id="@+id/your_state_progress_bar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:spb_animateToCurrentProgressState="true"
        app:spb_checkStateCompleted="true"
        app:spb_currentStateDescriptionColor="#4AE76C"
        app:spb_currentStateNumber="one"
        app:spb_maxStateNumber="two"

        app:spb_stateBackgroundColor="#BDBDBD"
        app:spb_stateDescriptionColor="#808080"
        app:spb_stateForegroundColor="#4AE76C"
        app:spb_stateNumberBackgroundColor="#808080"
        app:spb_stateNumberForegroundColor="#eeeeee"
        app:spb_stateSize="@dimen/_30sdp" />

    <ImageButton
        android:id="@+id/bt_back"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <LinearLayout
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_below="@id/bt_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rokkitt"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/textView2"
            android:textColor="@color/black"
            android:fontFamily="@font/rokkitt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_subtitle" />

        <TextView
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:fontFamily="@font/rokkitt"
            android:id="@+id/textView3"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/gray"
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:ems="10"
            android:inputType="textPersonName"
           />
        <TextView
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:fontFamily="@font/rokkitt"
            android:id="@+id/textView33"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText

            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/gray"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:ems="10"
            android:inputType="textEmailAddress"
            />
        <TextView
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:fontFamily="@font/rokkitt"
            android:id="@+id/textView34"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile" />

        <EditText
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/gray"
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:ems="10"
            android:inputType="phone"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/_50sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                android:outlineAmbientShadowColor="@color/black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rokkitt"
                android:text="@string/acceptour"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/rokkitt"

                android:id="@+id/textView5"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#5123B1"
                android:textStyle="bold"
                android:text="@string/term" />
        </LinearLayout>

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_signup_at_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:background="@drawable/ellipse"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rokkitt"
                android:text="@string/already"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/rokkitt"
                android:text="@string/signin"
                android:textColor="#5123B1"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>